--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "chcp 65001&&electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -19,12 +21,19 @@
   "homepage": "https://github.com/Normal-pcer/SLHS-Chat-Client#readme",
   "dependencies": {
     "electron": "^25.0.0",
+    "electron-packager": "^17.1.1",
+    "electron-squirrel-startup": "^1.0.0",
     "fontawesome": "^5.6.3",
     "showdown": "^2.1.0",
     "simplemde": "^1.11.2",
     "xss": "^1.0.14"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
     "electron": "^25.0.0"
   }
 }
