--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/Normal-pcer/SLHS-Chat-Client#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "electron": "^25.0.0",
     "electron-packager": "^17.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "fontawesome": "^5.6.3",
+    "github-markdown-css": "^5.2.0",
     "showdown": "^2.1.0",
     "simplemde": "^1.11.2",
     "xss": "^1.0.14"
