--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "slhs-chat-client",
-  "version": "1.0.0",
-  "description": "SLHS-Chat，一款$B的即时通信软件",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Normal-pcer/SLHS-Chat-Client.git"
-  },
-  "author": "normal-pcer",
-  "license": "LGPL-2.1",
-  "bugs": {
-    "url": "https://github.com/Normal-pcer/SLHS-Chat-Client/issues"
-  },
-  "homepage": "https://github.com/Normal-pcer/SLHS-Chat-Client#readme",
-  "dependencies": {
-    "axios": "^1.4.0",
-    "crypto-js": "^4.1.1",
-    "electron": "^25.0.0",
-    "electron-packager": "^17.1.1",
-    "electron-squirrel-startup": "^1.0.0",
-    "fontawesome": "^5.6.3",
-    "github-markdown-css": "^5.2.0",
-    "showdown": "^2.1.0",
-    "simplemde": "^1.11.2",
-    "xss": "^1.0.14"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^6.1.1",
-    "@electron-forge/maker-deb": "^6.1.1",
-    "@electron-forge/maker-rpm": "^6.1.1",
-    "@electron-forge/maker-squirrel": "^6.1.1",
-    "@electron-forge/maker-zip": "^6.1.1",
-    "electron": "^25.0.0"
-  }
+    "name": "slhs-chat-client",
+    "version": "1.0.0",
+    "description": "SLHS-Chat，一款$B的即时通信软件",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "electron .",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Normal-pcer/SLHS-Chat-Client.git"
+    },
+    "author": "normal-pcer",
+    "license": "LGPL-2.1",
+    "bugs": {
+        "url": "https://github.com/Normal-pcer/SLHS-Chat-Client/issues"
+    },
+    "homepage": "https://github.com/Normal-pcer/SLHS-Chat-Client#readme",
+    "dependencies": {
+        "axios": "^1.4.0",
+        "crypto-js": "^4.1.1",
+        "electron": "^25.0.0",
+        "electron-packager": "^17.1.1",
+        "electron-squirrel-startup": "^1.0.0",
+        "fontawesome": "^5.6.3",
+        "github-markdown-css": "^5.2.0",
+        "showdown": "^2.1.0",
+        "simplemde": "^1.11.2",
+        "xss": "^1.0.14"
+    },
+    "devDependencies": {
+        "@electron-forge/cli": "^6.1.1",
+        "@electron-forge/maker-deb": "^6.1.1",
+        "@electron-forge/maker-rpm": "^6.1.1",
+        "@electron-forge/maker-squirrel": "^6.1.1",
+        "@electron-forge/maker-zip": "^6.1.1",
+        "electron": "^25.0.0"
+    }
 }
