--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "electron .",
+        "start": "chcp 65001 && electron .",
         "package": "electron-forge package",
         "make": "electron-forge make"
     },
